unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/NF_Skills_SLA_Summary__c.object-meta.xml
<CustomObject>
    <label>Skills SLA Summary</label>
    <nameField>
        <displayFormat>SLA-{00000}</displayFormat>
        <label>Skills SLA Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills SLA Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>