unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/fields/BusinessUnitId__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitId__c</fullName>
    <label>BusinessUnitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>