unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/fields/ContactsOutOfSLA__c.field-meta.xml
<CustomField>
    <fullName>ContactsOutOfSLA__c</fullName>
    <label>ContactsOutOfSLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>