unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/fields/ServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>ServiceLevel__c</fullName>
    <label>ServiceLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>