unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/fields/TotalContacts__c.field-meta.xml
<CustomField>
    <fullName>TotalContacts__c</fullName>
    <label>TotalContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>