unpackaged/main/default/objects/NF_Skills_SLA_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessUnitId__c</columns>
    <columns>SkillId__c</columns>
    <columns>SkillName__c</columns>
    <columns>ContactsWithinSLA__c</columns>
    <columns>ContactsOutOfSLA__c</columns>
    <columns>TotalContacts__c</columns>
    <columns>ServiceLevel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>